# CineRipR

./: .dockerignore  .gitignore  .gitmessage  CHANGELOG.md  CI_CD_DOCUMENTATION.md  CODE_QUALITY.md  CONTRIBUTING.md  DOCKER_PERMISSIONS.md  Dockerfile  FINISHED_PATH_LOGIC.md  LICENSE  METADATA_INTEGRATION_EXAMPLE.py  PROJECT_STATUS.md  PROJECT_STATUS_update.md  README.md  REFACTORING.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_NOTES_1.0.24.md  RELEASE_NOTES_1.0.25.md  RELEASE_NOTES_1.0.29.md  RELEASE_NOTES_1.0.30.md  RELEASE_NOTES_1.0.33.md  RELEASE_NOTES_1.0.36.md  RELEASE_NOTES_1.0.7.md  cineripr.toml  cineripr.toml.example  compile_error.txt  compile_error_2.txt  create_github_release.md  create_release.ps1  create_release.sh  create_release_1.0.30.sh  debug_bytes.py  debug_bytes_v2.py  debug_extraction_issue.py  debug_move_issue.py  debug_nfo_enforcement.py  emby_extractor.py  emby_extractor.toml  (+7 more)
.continue/rules/: new-rule-1.md  new-rule.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-build.yml  docker.yml  release.yml
docs/: README.md
docs/architecture/: overview.md
docs/development/: code-quality.md  notes.md  refactoring.md
docs/operations/: release-checklist.md
docs/releases/: v1.0.18.md  v1.0.26.md  v1.0.27.md  v1.0.28.md  v1.0.31.md  v1.0.32.md  v1.0.34.md  v1.0.35.md  v1.0.37.md  v1.0.8.md  v2.0.0.md  v2.1.0.md  v2.2.0.md  v2.2.3.md  v2.2.5.md  v2.3.0.md  v2.3.1.md  v2.3.2.md  v2.3.3.md  v2.3.4.md  v2.3.5.md  v2.4.0.md  v2.4.1.md  v2.4.2.md  v2.4.3.md  v2.5.0.md  v2.5.1.md  v2.5.10.md  v2.5.11.md  v2.5.12.md  v2.5.13.md  v2.5.14.md  v2.5.15.md  v2.5.16.md  v2.5.17.md  v2.5.6.md  v2.5.7.md  v2.5.8.md  v2.5.9.md
examples/: README.md  cineripr.toml.example  docker-compose.yml
scripts/: README.md  build-docker.sh  create-release.sh  run-tests.sh
src/cineripr/: __init__.py  archive_constants.py  archive_detection.py  archive_extraction.py  archives.py  cli.py  config.py  file_operations.py  path_utils.py  progress.py  status.py  webgui.py
src/cineripr/core/: __init__.py  archives.py  cleanup.py  file_mover.py  file_operations.py  naming.py  nfo_parser.py  path_utils.py  tmdb.py
src/cineripr/extraction/: __init__.py  archive_constants.py  archive_detection.py  archive_extraction.py
src/cineripr/web/: __init__.py  app.py  settings_db.py  status.py  webgui.py
src/cineripr/web/routes/: __init__.py  api.py  settings.py  views.py
src/cineripr/web/services/: __init__.py  status_tracker.py
src/cineripr/web/static/css/: style.css
src/cineripr/web/static/js/: app.js
src/cineripr/web/templates/: index.html
src/emby_extractor/: __init__.py  archive_constants.py  archive_detection.py  archive_extraction.py  archives.py  cleanup.py  cli.py  config.py  file_operations.py  path_utils.py  progress.py
tests/: __init__.py  conftest.py  test_config.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_archive_detection.py  test_archive_extraction.py
