[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "emby-extractor"
version = "0.1.0"
description = "Automate extraction of multi-part downloads and finished-folder cleanup for Emby"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Rokk001" }
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/Rokk001/emby-extractor"
Source = "https://github.com/Rokk001/emby-extractor"
Issues = "https://github.com/Rokk001/emby-extractor/issues"

[project.scripts]
emby-extractor = "emby_extractor.cli:main"