[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cineripr"
version = "1.0.0"
description = "Automate extraction of multi-part downloads and finished-folder cleanup for media libraries"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Rokk001" }
]
requires-python = ">=3.11"
dependencies = []

[project.classifiers]
# Trove classifiers for PyPI/GitHub metadata completeness
"Development Status :: 5 - Production/Stable"
"Environment :: Console"
"Intended Audience :: End Users/Desktop"
"License :: OSI Approved :: MIT License"
"Operating System :: Microsoft :: Windows"
"Operating System :: POSIX :: Linux"
"Programming Language :: Python"
"Programming Language :: Python :: 3"
"Programming Language :: Python :: 3.11"
"Topic :: System :: Archiving :: Compression"
"Topic :: Utilities"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/Rokk001/CineRipR"
Source = "https://github.com/Rokk001/CineRipR"
Issues = "https://github.com/Rokk001/CineRipR/issues"

[project.scripts]
# Backwards-compatible CLI plus new name
emby-extractor = "emby_extractor.cli:main"
cineripr = "cineripr.cli:main"